@@ -1,12 +1,0 @@
-<div class="cr-custom-tooltip-section">  
-  <div class="cr-custom-tooltip-label"> Name </div> 
-  <div> {{ content.name }} </div> 
-  <div class="cr-custom-tooltip-label"> ID </div> 
-  <div> {{ content.id }} </div> 
-  <div class="cr-custom-tooltip-label"> Version </div> 
-  <div> {{ content.version.number }} </div> 
-  <div class="cr-custom-tooltip-label"> Host name </div> 
-  <div> {{ content.hostname }} </div> 
-  <div class="cr-custom-tooltip-label"> REST URL </div> 
-  <div> {{ content.rest_url }} </div> 
-</div>
