@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
  
+ - Improve shards view performance
+ 
 2017/09/18 1.6.1
 ================
 
